# LuaPlate

./: .gitignore  CMakeLists.txt  README.md
example/: cube.lua  ray.lua  simple.lua
luaplate/: data.lua  draw.lua  init.lua  obj.lua  util.lua
src/: main.cpp  version.h
src/plate/: canvas.cpp  canvas.h  sdltype.h
src/script/: script.cpp  script.h
src/util/: log.h
